eks-modules-setup/deployments/alb/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: myapp
        image: k8s.gcr.io/e2e-test-images/echoserver:2.5
        resources:
          limits:
            memory: "100Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
