eks-modules-setup/deployments/alb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - host: api.test.com
    http:
      paths:
      - pathType: Exact
        path: "/"
        backend:
          service:
            name: myapp-svc
            port: 
              number: 8080
